--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class='container'>
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
 
