--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>こんにちは <%= @resource.email %> さん!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>パスワードの変更を要求されました。以下のパスワード変更リンクから変更することができます。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワード変更リンク', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>パスワード変更を要求していない場合は、このメールを無視してください</p>
+<p>上記のリンクにアクセスし新しいパスワードを作成するまで、パスワードは変更されません</p>
+
+Shiori
