--- a/app/views/layouts/_header-sidenav-common.erb
+++ b/app/views/layouts/_header-sidenav-common.erb
@@ -17,5 +17,5 @@
     <% end %>
   </li>
 
-  <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
+  <li><%= link_to "サインアップ", new_user_registration_path, class: 'post' %></li>
 <% end %>
