--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "サインアップ" %>
+    <%= f.submit "サインアップ", class: "waves-light btn" %>
   </div>
 <% end %>
 
