--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "送信" %>
+    <%= f.submit "送信", class: "waves-light btn" %>
   </div>
 <% end %>
 
