--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,12 +38,13 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "更新" %>
+    <%= f.submit "更新", class: "waves-light btn" %>
   </div>
 <% end %>
 
 <h3>アカウントを削除</h3>
 
-<p>アカウントを削除しますか？ <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "本当に削除してよろしいですか？" }, method: :delete %></p>
+<p>アカウントを削除しますか？ <%= button_to "アカウントを削除する", registration_path(resource_name),
+  data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: "waves-light btn red" %></p>
 
 <%= link_to "戻る", :back %>
