media_manageのsystem specを作成

--- a/app/assets/stylesheets/media_manage.scss
+++ b/app/assets/stylesheets/media_manage.scss
@@ -13,6 +13,7 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;  
         overflow: hidden;
+        text-transform: none !important;
         @media (max-width: $mobile-brakepoint) {
           font-size: 1em;
           -webkit-line-clamp: 3;
