--- a/app/views/media_manages/_media_manage.html.erb
+++ b/app/views/media_manages/_media_manage.html.erb
@@ -5,6 +5,7 @@
 <div class="card horizontal media-manage-card">
   <div class="card-image">
     <%= thumbnail_tag(media_manage, '160x90') %>
+    <span class="card-title media-length"><%= media_manage.media_sec_str %></span>
   </div>
   <div class="card-stacked">
     <div class="card-action">
