--- a/app/views/media_manages/index.html.erb
+++ b/app/views/media_manages/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'search_form' %>
 <% if @media_manages.any? %>
   <%= render partial: "media_manage", collection: @media_manages %>
 <% end %>
