search_formパーシャルのパラメータをlocals経由に修正

--- a/app/views/media_manages/_search_form.html.erb
+++ b/app/views/media_manages/_search_form.html.erb
@@ -1,39 +1,39 @@
 <%= form_with url: media_manages_path, method: :get, local: true, id: 'search-form-id' do |f| %>
   <div class="search-bar">
-    <%= f.text_field :keywords, value: @keywords_text, placeholder: '空白で区切ってAND検索' %>
+    <%= f.text_field :keywords, value: keywords_text, placeholder: '空白で区切ってAND検索' %>
     <%= f.submit "検索", class: "waves-light btn" %>
   </div>
   <div class="search-options">
     <div class="search-checkbox-list">
       <div class="search-checkbox">
         <label>
-          <%= f.check_box :nowatch, { checked: @search_flags[:nowatch], class: "filled-in" } %>
+          <%= f.check_box :nowatch, { checked: search_flags[:nowatch], class: "filled-in" } %>
           <span>未視聴</span>
         </label>
       </div>
       <div class="search-checkbox">
         <label>
-          <%= f.check_box :watching, { checked: @search_flags[:watching], class: "filled-in" } %>
+          <%= f.check_box :watching, { checked: search_flags[:watching], class: "filled-in" } %>
           <span>視聴中</span>
         </label>
       </div>
       <div class="search-checkbox">
         <label>
-          <%= f.check_box :watched, { checked: @search_flags[:watched], class: "filled-in" } %>
+          <%= f.check_box :watched, { checked: search_flags[:watched], class: "filled-in" } %>
           <span>視聴済み</span>
         </label>
       </div>
       <div class="search-checkbox">
         <label>
-          <%= f.check_box :unknown, { checked: @search_flags[:unknown], class: "filled-in" } %>
+          <%= f.check_box :unknown, { checked: search_flags[:unknown], class: "filled-in" } %>
           <span>不明</span>
         </label>
       </div>
     </div>
     <div class="sort-form">
-      <%= f.select :sort_target, @sort_items, { selected:  @sort_target }, { class: "browser-default" } %>
+      <%= f.select :sort_target, sort_items, { selected:  sort_target }, { class: "browser-default" } %>
       <i class="material-icons search-sort-order search-icon-frame">
-        <% if @sort_order == :asc %>
+        <% if sort_order == :asc %>
           arrow_upward
         <% else %>
           arrow_downward
@@ -41,6 +41,6 @@
       </i>
     </div>
   </div>
-  <%= f.hidden_field :sort_order, value: @sort_order %>
+  <%= f.hidden_field :sort_order, value: sort_order %>
 <% end %>
 
