無限スクロールを実装

--- a/app/assets/stylesheets/media_manage.scss
+++ b/app/assets/stylesheets/media_manage.scss
@@ -209,3 +209,11 @@
   border-color: rgb(179, 179, 179);
   border-radius: 4px;
 }
+
+.media_manage_list .pagination {
+  display: none;
+}
+
+#loading-icon {
+  text-align: center;
+}
