--- a/app/views/media_manages/index.html.erb
+++ b/app/views/media_manages/index.html.erb
@@ -2,6 +2,4 @@
   keywords_text: @keywords_text, search_flags: @search_flags,
   sort_items: @sort_items, sort_order: @sort_order, sort_target: @sort_target } %>
 
-<% if @media_manages.any? %>
-  <%= render partial: "media_manage", collection: @media_manages %>
-<% end %>
+<%= render partial: 'shared/media_manages', locals: { media_manages: @media_manages } %>
