ECSでヘルスエラーとなる問題の修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
       <div class="landing-seekbar-base"></div>
       <div class="landing-seekbar-seek"></div>
       <div class="landing-seekbar-shiori"></div>
-      <%= image_tag 'shiori', class: 'landing-seekbar-shiori' %>
+      <%= image_tag 'shiori.png', class: 'landing-seekbar-shiori' %>
     </div>
   </div>
 </div>
